--- a/Framework/index.html
+++ b/Framework/index.html
@@ -19,24 +19,21 @@
 </head>
 <body>
     <div class="container">
+        <div id="background-wrap">
+            <div class="bubble x1"></div>
+            <div class="bubble x2"></div>
+            <div class="bubble x3"></div>
+            <div class="bubble x4"></div>
+            <div class="bubble x5"></div>
+            <div class="bubble x6"></div>
+            <div class="bubble x7"></div>
+            <div class="bubble x8"></div>
+            <div class="bubble x9"></div>
+            <div class="bubble x10"></div>
+        </div>
         <header>
             <h1>Welcome to <span>ART64 India pvt ltd</span></h1>
         </header>
-        <section class="rw-wrapper">
-            <h2 class="rw-sentence">
-                <span>What</span>
-                <span>would you like</span>
-                <span>to</span>
-                <div class="rw-words">
-                    <span>share</span>
-                    <span>make</span>
-                    <span>explore</span>
-                    <span>create</span>
-                    <span>invent</span>
-                </div>
-                <span>today?</span>
-            </h2>
-        </section>
     </div>
 </body>
 </html>
