--- a/Framework/index.html
+++ b/Framework/index.html
@@ -19,20 +19,14 @@
 </head>
 <body>
     <div class="container">
-        <div id="background-wrap">
-            <div class="bubble x1"></div>
-            <div class="bubble x2"></div>
-            <div class="bubble x3"></div>
-            <div class="bubble x4"></div>
-            <div class="bubble x5"></div>
-            <div class="bubble x6"></div>
-            <div class="bubble x7"></div>
-            <div class="bubble x8"></div>
-            <div class="bubble x9"></div>
-            <div class="bubble x10"></div>
-        </div>
-        <header>
-            <h1>Welcome to <span>ART64 India pvt ltd</span></h1>
+        <header class="cont-slider">
+            <section class="slider">
+              <article class="slide one"></article><!--
+              --><article class="slide two"></article><!--
+              --><article class="slide three"></article><!--
+              --><article class="slide four"></article><!--
+              --><article class="slide five"></article>
+            </section>
         </header>
     </div>
 </body>
