--- a/Framework/index.html
+++ b/Framework/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <div class="container">
-        <nav>
-            
-        </nav>
-        
+        <div class="page">
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__group"><a href="#0" class="menu__link">Option #1</a></li>
+                <li class="menu__group"><a href="#0" class="menu__link">Option #2</a></li>
+                <li class="menu__group"><a href="#0" class="menu__link">Option #3</a></li>
+              </ul>
+            </nav>
+          </div>         
     </div>
 </body>
 </html>
