--- a/Framework/index.html
+++ b/Framework/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art64</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="script" href="JS/script.js">
 
 </head>
 <body>
-    <div class="container">
-        <div class="page">
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__group"><a href="#0" class="menu__link">Option #1</a></li>
-                <li class="menu__group"><a href="#0" class="menu__link">Option #2</a></li>
-                <li class="menu__group"><a href="#0" class="menu__link">Option #3</a></li>
-              </ul>
-            </nav>
-          </div>         
-    </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js'></script><script  src="JS/script.js"></script>
 </body>
 </html>
